# transition-ticket

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  cli.py  cli.spec  flake.nix  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
geetest/: index.html
geetest/css/: style.css
interface/: __init__.py
interface/CLI/: __init__.py  product.py  setting.py  user.py
util/: __init__.py
util/Bilibili/: __init__.py
util/Captcha/: __init__.py
util/Config/: __init__.py
util/Data/: __init__.py
util/Geetest/: __init__.py
util/Info/: __init__.py
util/Login/: __init__.py
util/Notice/: __init__.py
util/Request/: __init__.py
util/Task/: __init__.py
util/push/: push.py
