[tool.poetry]
name = "transition-ticket"
version = "1.0.0"
description = "B站会员购脚本"
authors = ["biliticket"]
license = "GPL3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transitions = "^0.9.1"
httpx = {extras = ["http2", "socks"], version = "^0.27.0"}
hishel = "^0.0.29"
fake-useragent = "^1.5.1"
loguru = "^0.7.2"
bili-ticket-gt-python = "^0.2.2"
pycryptodome = "^3.20.0"
pyyaml = "^6.0.1"
inquirer = "^3.2.4"
qrcode = "^7.4.2"
pillow = "^10.3.0"
selenium = "^4.21.0"
pybrowsers = "^0.6.0"
py-machineid = "^0.5.1"
plyer = "^2.1.0"
pyaudio = "^0.2.14"
pytz = "^2024.1"
pyinstaller = "^6.7.0"
psutil = "^6.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pyupgrade = "^3.15.2"
snakeviz = "^2.2.0"

[tool.poetry.group.graph]
optional = true

[tool.poetry.group.graph.dependencies]
graphviz = "^0.20.3"
pygraphviz = "^1.13"

[tool.ruff]
line-length = 190

[tool.ruff.lint]
select = ["B", "C4", "C9", "E", "F", "I", "PL", "S", "SIM", "U", "W", "YTT"]
ignore = ["B006", "S311", "S501"]

[tool.ruff.lint.mccabe]
max-complexity = 17

[tool.ruff.lint.pylint]
max-args = 10
max-statements = 57
max-returns = 7
allow-magic-value-types = ["int","str"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
